--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,4 +34,5 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
+        name: melody-${{ matrix.platform }}-${{ github.sha }}
         path: dist
